# mmbot-prices

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  code.js  collect  devel.vscgi  index.html  minute.php  style.css
conf/: prices.conf
debian/: .gitignore  changelog  conffiles  control  prices.postinst  prices.service
src/main/: CMakeLists.txt  main.cpp
www/: code.js  index.html  style.css
www_old/: code.js  db.vscgi  index.html
